--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -5,7 +5,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
   height: 70vh;
 }
